# Courses

./: README.md
C++/: HW8_report.docx  HomeWork I.docx  HomeWork II.docx  HomeWork VII.docx
C++/01_Gabriel_Taubin/: CMakeCache.txt
C++/01_Gabriel_Taubin/src/: Assignment_01.cpp
C++/01_Naifan_Gao/: ~$meWork I.docx
C++/01_Naifan_Gao/Debug/: assignment_01
C++/01_Naifan_Gao/src/: Assignment_01.cpp  CMakeLists.txt
C++/02_Naifan_Gao/src/: Assignment_02_1.cpp  Assignment_02_2.cpp  Assignment_02_3.cpp  CMakeLists.txt
C++/03_Naifan_Gao/src/: Assignment_03_1.cpp  Assignment_03_2.cpp  Assignment_03_3.cpp  Assignment_03_4.cpp  Assignment_03_5.cpp  CMakeLists.txt
C++/04_Naifan_Gao/src/: CMakeLists.txt  assignment_04_1.cpp  assignment_04_2.cpp  assignment_04_3.cpp  myStringFunctions.cpp  myStringFunctions.hpp
C++/05_Naifan_Gao 2/src/: AlgebraicTreeNode.cpp  AlgebraicTreeNode.hpp  Calc5.cpp  test
C++/05_Naifan_Gao 3/src/: AlgebraicTreeNode.cpp  AlgebraicTreeNode.hpp  CMakeLists.txt
C++/05_Naifan_Gao/src/: AlgebraicTreeNode.cpp  Calc5.cpp  test
C++/06_Naifan_Gao/src/: AlgebraicTreeExpression.cpp  AlgebraicTreeExpression.hpp  AlgebraicTreeNode.cpp  AlgebraicTreeNode.hpp  CMakeLists.txt  Calc6.cpp  test
C++/07_Naifan_Gao copy/src/: AlgebraicTreeExpression.cpp  AlgebraicTreeExpression.hpp  AlgebraicTreeNode.hpp  AlgebraicTreeUnary.hpp  CMakeLists.txt  Calc7.cpp
C++/07_Naifan_Gao/src/: AlgebraicTreeExpression.cpp  AlgebraicTreeExpression.hpp  AlgebraicTreeNode.cpp  AlgebraicTreeNode.hpp  AlgebraicTreeNumber.cpp  AlgebraicTreeNumber.hpp  AlgebraicTreeOperation.cpp  AlgebraicTreeOperation.hpp  AlgebraicTreeUnary.cpp  AlgebraicTreeUnary.hpp  CMakeLists.txt  Calc7.cpp
C++/08_Gabriel_Taubin/QtCalc1/src/: AboutDialog.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
C++/08_Gabriel_Taubin/QtCalc2/src/: AboutDialog.cpp  AlgebraicTreeExpression.cpp  AlgebraicTreeExpression.hpp  AlgebraicTreeNode.cpp  AlgebraicTreeNode.hpp  AlgebraicTreeNumber.cpp  AlgebraicTreeNumber.hpp  AlgebraicTreeOperation.cpp  AlgebraicTreeOperation.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  QtCalc2.pro
C++/08_Naifan_Gao/QtCalc1/src/: AboutDialog.cpp  AlgebraicTreeExpression.cpp  AlgebraicTreeExpression.hpp  AlgebraicTreeNode.cpp  AlgebraicTreeNumber.cpp  AlgebraicTreeNumber.hpp  AlgebraicTreeOperation.cpp  AlgebraicTreeOperation.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
C++/08_Naifan_Gao/QtCalc2/src/: AlgebraicTreeExpression.cpp  AlgebraicTreeExpression.hpp  AlgebraicTreeNode.cpp  AlgebraicTreeNode.hpp  AlgebraicTreeNumber.cpp  AlgebraicTreeNumber.hpp  AlgebraicTreeOperation.cpp  AlgebraicTreeOperation.hpp  MainWindow.cpp  MainWindow.hpp
C++/09_Naifan_Gao/: Readme
C++/09_Naifan_Gao/src/: CMakeLists.txt
C++/09_Naifan_Gao/src/ifs/: CMakeLists.txt  Ifs.cpp  Ifs.hpp  IfsLoader.cpp  IfsLoader.hpp  IfsSaver.cpp  IfsSaver.hpp  IfsWrlLoader.cpp  IfsWrlLoader.hpp  IfsWrlSaver.cpp  IfsWrlSaver.hpp  Tokenizer.cpp  Tokenizer.hpp
C++/09_Naifan_Gao/src/test/: CMakeLists.txt  ifstest.cpp
C++/09_Naifan_Gao/src/util/: BBox.cpp  BBox.hpp  CMakeLists.txt
C++/09_Naifan_Gao/src/viewer/: CMakeLists.txt  IfsAboutDialog.cpp  IfsAboutDialog.hpp  IfsGLBuffer.cpp  IfsGLBuffer.hpp  IfsGLHandles.cpp  IfsGLHandles.hpp  IfsGLShader.cpp  IfsGLShader.hpp  IfsGLWidget.cpp  IfsGLWidget.hpp  IfsMainWindow.cpp  IfsMainWindow.hpp  IfsViewerApp.cpp  IfsViewerData.cpp  IfsViewerData.hpp  QtLogo.cpp  QtLogo.hpp
C++/10_Naifan_Gao/src/: CMakeLists.txt
C++/10_Naifan_Gao/src/io/: AppLoader.cpp  AppLoader.hpp  AppSaver.cpp  AppSaver.hpp  CMakeLists.txt  Loader.hpp  LoaderWrl.cpp  LoaderWrl.hpp  Saver.hpp  SaverWrl.cpp  SaverWrl.hpp  StrException.hpp  Tokenizer.cpp
C++/10_Naifan_Gao/src/test/: wrltest.cpp
C++/10_Naifan_Gao/src/util/: BBox.cpp  BBox.hpp  StaticRotation.cpp  StaticRotation.hpp
C++/10_Naifan_Gao/src/viewer/: CMakeLists.txt  WrlAboutDialog.cpp  WrlAboutDialog.hpp  WrlGLBuffer.cpp  WrlGLBuffer.hpp  WrlGLHandles.cpp  WrlGLHandles.hpp  WrlGLShader.cpp  WrlGLShader.hpp  WrlGLWidget.cpp  WrlGLWidget.hpp  WrlMainWindow.cpp  WrlMainWindow.hpp  WrlQtLogo.cpp  WrlQtLogo.hpp  WrlToolsWidget.cpp  WrlToolsWidget.hpp  WrlViewerApp.cpp  WrlViewerData.cpp  WrlViewerData.hpp
C++/10_Naifan_Gao/src/wrl/: Appearance.cpp  Appearance.hpp  CMakeLists.txt  Group.cpp  Group.hpp  ImageTexture.cpp  ImageTexture.hpp  IndexedFaceSet.cpp  IndexedFaceSet.hpp  Material.cpp  Material.hpp  Node.hpp  PixelTexture.cpp  PixelTexture.hpp  Rotation.cpp  Rotation.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphTraversal.cpp  SceneGraphTraversal.hpp  Shape.cpp  Shape.hpp  Transform.cpp  Transform.hpp
C++/11_Naifan_Gao/src/: CMakeLists.txt
C++/11_Naifan_Gao/src/io/: Loader.hpp  LoaderWrl.cpp  SaverWrl.hpp  StrException.hpp
C++/11_Naifan_Gao/src/util/: BBox.hpp  StaticRotation.cpp
C++/11_Naifan_Gao/src/viewer/: CMakeLists.txt  WrlAboutDialog.cpp  WrlAboutDialog.hpp  WrlGLBuffer.cpp  WrlGLBuffer.hpp  WrlGLHandles.cpp  WrlGLHandles.hpp  WrlGLShader.cpp  WrlGLShader.hpp  WrlGLWidget.cpp  WrlGLWidget.hpp  WrlMainWindow.cpp  WrlMainWindow.hpp  WrlQtLogo.cpp  WrlQtLogo.hpp  WrlToolsWidget.cpp  WrlToolsWidget.hpp  WrlViewerApp.cpp  WrlViewerData.cpp  WrlViewerData.hpp
C++/11_Naifan_Gao/src/wrl/: Group.cpp  Group.hpp  IndexedFaceSet.cpp  IndexedFaceSet.hpp  Material.hpp  Node.hpp  Rotation.hpp  SceneGraphProcessor.cpp  SceneGraphProcessor.hpp  Transform.cpp
C++/12_Naifan_Gao 2/src/test/: CMakeLists.txt
C++/12_Naifan_Gao/src/: CMakeLists.txt
C++/Course_C/HelloWorld/: CMakeCache.txt  cmake_install.cmake
C++/IfsViewer-data/: bunny-mat.wrl  colobus7-jaw-npv.wrl  colobus7jaw-opts.wrl  cow-mat-npv.wrl  cow-npv-cpf.wrl  crouzon-1-npv-cpf.wrl  crouzon-2-npv-cpf.wrl  cube.wrl  cubeG.wrl  cubeT.wrl  hand053k.wrl  ico84.wrl  oct-bin.ply  octahedron-mat-npf.wrl  octahedron-mat.wrl  spin4-nch5.wrl  spine4-opts.wrl  tetra-cpv-nos.wrl  tetra-cpv-npf.wrl  tetra-cpv-npv.wrl  tetra-mat-nos.wrl  tetra-mat-npf.wrl  tetra-mat-npv.wrl
C++/opts/: genus49-opts.wrl  gsi51-opts.wrl  hand-oliver-opts.wrl  spine4-opts.wrl  triceratops-opts.wrl
(+90 files in other folders)
